# gym-helper

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-2b74c2e1c6209f39341c93456701554b4dd0c3e3fefa42b8c247004f8ab38506.json  query-8bd34cf3408604dffe8f1abf21bb95d112713c3a8ce4cd5b22d9c6d65d352bb1.json
env/: env.json
migrations/: 20250419233445_initial_migration.sql  20250507020431_create_membership_schema.sql
src/: config.rs  db.rs  logging.rs  macros.rs  main.rs  openapi.rs
src/auth/: authentication.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  models.rs  services.rs
src/auth/models/: jwt_models.rs  mod.rs  requests.rs  responses.rs  users.rs
src/clients/: handlers.rs  mod.rs  services.rs
src/clients/membership/: models.rs
src/clients/models/: clients.rs  mod.rs  requests.rs
src/membership/: handlers.rs  mod.rs  services.rs
src/membership/models/: membership.rs  mod.rs  requests.rs
src/subscription/: handlers.rs  mod.rs  models.rs  services.rs  utils.rs
