[package]
name = "gym_helper"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio-native-tls", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"