[package]
name = "gym_helper"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio-native-tls", "uuid", "chrono", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-appender = "0.2"
jsonwebtoken = "9.3.1"
actix-web-httpauth = "0.8.2"
argon2 = "0.5"
rand = "0.9.1"
actix-web-grants = "4.1.2"
utoipa = { version = "4.2", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }

[dev-dependencies]
tokio-test = "0.4"
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio-native-tls", "uuid", "chrono", "macros"] }
mockall = "0.12"
